<resources>
    <string name="app_name">LAM2021</string>

    <!-- LOGIN -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Username must be at least 3 characters long and can contain only letters, numbers, points, dashes and underscores</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 8 characters long and must contain uppercase, lowercase, numbers and symbols</string>
    <string name="login_failed">Login failed</string>
    <string name="description_register">"Don't have an account yet?"</string>
    <string name="description_login">Already have an account?</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_pantry">Pantry</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings">Settings</string>

    <string name="barcodes_header">Barcodes</string>

    <string name="auto_scan">Automatic processing</string>
    <string name="auto_scan_summary_on">"Barcodes will be processed as soon as they're detected."</string>
    <string name="auto_scan_summary_off">Barcodes will be processed on shutter press.</string>

    <string name="fast_add">Fast scan</string>
    <string name="fast_add_summary_on">Products will be added to pantry immediately.</string>
    <string name="fast_add_summary_off">Product info could be edited before adding them to pantry.</string>

    <string name="notifications_header">Notifications</string>

    <string name="expiry_notification">Expiry notification</string>
    <string name="expiry_notification_summary">Send daily notifications for expiring or expired products.</string>
    <string name="expiry_notification_time">Expiry notification time</string>
    <string name="expiry_notification_time_summary">The time at which the notification will be sent.</string>
    <string name="expiry_notification_before">Days before expiry</string>
    <string name="expiry_notification_before_summary">Only products who are going to expire in less than given days will be notified.</string>

    <string name="buy_products_reminder">Reminder notification</string>
    <string name="buy_products_reminder_summary">Send a notification with all the favorite products.</string>
    <string name="buy_products_reminder_weekdays">Reminder days</string>
    <string name="buy_products_reminder_weekdays_summary">Notification will be sent only on specified days of the week.</string>
    <string name="buy_products_reminder_time">Reminder time</string>
    <string name="buy_products_reminder_time_summary">The time at which the notification will be sent.</string>

    <!-- PRODUCT/CATEGORY -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="expiry">Expiry</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="important">Favorite</string>
    <string name="color">Color</string>

    <!-- MENUS -->
    <string name="new_">New</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="delete">Delete</string>
    <string name="delete_local">Delete from local pantry</string>
    <string name="delete_remote">Delete from remote server</string>
    <string name="select_all">Select all</string>

    <string name="insert_no_barcode">Please insert code</string>
    <string name="insert_invalid_barcode">Invalid code</string>

    <string name="no_barcode_found">No barcode found</string>

    <string name="product_deleted_local">%s deleted from local pantry</string>
    <string name="product_deleted_remote">%s deleted from remote server</string>

    <string name="dlg_product_back_confirm_title">Unsaved changes</string>
    <string name="dlg_product_back_confirm_message">Do you want to save changes?</string>

    <string name="dlg_delete_title">Delete %s</string>
    <string name="dlg_delete_message">Are you sure?</string>

    <string name="dlg_delete_local_title">Delete local product</string>
    <string name="dlg_delete_local_message">Are you sure?</string>

    <string name="dlg_delete_remote_title">Delete remote product</string>
    <string name="dlg_delete_remote_message">Are you sure?</string>

    <string name="dlg_logout_title">Logout</string>
    <string name="dlg_logout_text">"Are you sure?"</string>

    <!-- GENERAL PURPOSE -->
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="barcode">Barcode</string>
    <string name="barcode_scan">Scan product</string>
    <string name="camera_add">Camera</string>
    <string name="manual_add">Manual</string>
    <string name="flash">Flash</string>
    <string name="flip_camera">Flip camera</string>
    <string name="remove_filters">Remove filters</string>
    <string name="app_logo">Logo</string>

    <!-- OFFLINE -->
    <string name="offline_alert">Application is in offline mode</string>

    <!-- NO INTERNET DIALOG -->
    <string name="no_internet_dlg_title">No internet connection</string>
    <!-- TODO messages -->
    <string name="no_internet_dlg_message_splash">"Cannot reach the remote server. You can still use the application to see and edit your local pantry, but you won't be able to add new products."</string>
    <string name="no_internet_dlg_message_scanner">Barcode scanner needs an active internet connection in order to function properly</string>
    <string name="offline_mode">Offline mode</string>

    <!-- PANTRY -->
    <string name="pantry_fragment_exp_format">Expiry: %s</string>
    <string name="product_added">%s added to your pantry</string>
    <string name="product_already_in_pantry">%s is already in your pantry</string>
    <string name="pantry_empty">Pantry is empty</string>
    <string name="pantry_no_products_found">No products found</string>

    <!-- CATEGORIES -->
    <string name="categories_empty">No categories</string>

    <!-- FILTERS BANNER -->
    <string name="banner_active_filters">Active filters</string>
    <string name="banner_filter_important">Favorite products</string>
    <string name="banner_filter_expired">Expired products</string>
    <string name="banner_filter_uncategorized">Uncategorized products</string>
    <string name="banner_filter_categories">Categories</string>

    <!-- FILTERS DIALOG -->
    <string name="dlg_filters_title">Filters</string>
    <string name="dlg_filters_apply">Apply</string>
    <string name="dlg_filters_clear">Clear</string>

    <string name="filter_important">Favorite</string>
    <string name="filter_expired">Expired</string>
    <string name="filter_uncategorized">Uncategorized</string>

    <!-- COLOR PICKER DIALOG -->
    <string name="dlg_color_title">Pick a color</string>
    <string name="dlg_color_custom_button">Custom</string>

    <string name="color_r">R</string>
    <string name="color_g">G</string>
    <string name="color_b">B</string>

    <!-- CATEGORY DIALOG -->
    <string name="dlg_category_new">New category</string>
    <string name="dlg_category_edit">Edit category</string>
    <string name="dlg_category_no_name_error">Category name is required</string>
    <string name="dlg_category_deleted">Category %s deleted</string>
    <string name="dlg_delete_category_title">Delete category</string>

    <!-- MANUAL INSERT DIALOG -->
    <string name="dlg_manual_title">Insert product code</string>
    <string name="dlg_manual_add">Add</string>

    <!-- REMOTE PRODUCTS DIALOG -->
    <string name="dlg_remote_products_title">Products</string>
    <string name="dlg_remote_products_add">Add new product</string>

    <string name="dlg_number_picker_message">Days before expiry</string>

    <!-- CAMERA PERMISSION -->
    <string name="camera_permission_error">The barcode scanner needs camera permissions to function.</string>
    <string name="camera_permission_rationale_title">Camera permission</string>
    <string name="camera_permission_rationale_message">"In order to use the barcode scanner, camera permission should be granted. The captured images will be used for the sole purpose of barcode identification and no other data will be saved or sent to any remote server.\nIf you choose not to grant the permission, the application will still work but you won't be able to use the scanner."</string>

    <!-- ERRORS?! FIXME -->
    <string name="error_http">HTTP error: %d</string>
    <string name="error_already_registered">User is already registered</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_encrypted_preferences">"ERROR: Unable to load. Please clean data or reinstall."</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_product_name_empty">Product name cannot be empty</string>
    <string name="error_stored_credentials">Stored credentials are invalid. Please login again.</string>

    <!-- CATEGORIES TODO -->
    <string name="category_uncategorized_name">Uncategorized</string>
    <string name="category_uncategorized_desc">No category</string>

    <!-- NOTIFICATION -->
    <string name="notification_channel_expiry_name">Expiry</string>
    <string name="notification_channel_reminder_name">Reminders</string>

    <string name="expiring_notification_title">Some products are expiring</string>
    <string name="expiring_notification_content_row">%s expires in %s</string>
    <string name="expired_notification_title">Some products are expired</string>
    <string name="expired_notification_content_row">%s expired since %s</string>
    <string name="expired_notification_content_row_today">%s expired today</string>
    <string name="reminder_notification_title">Grocery list</string>

    <string name="press_back_again">Press back again to exit</string>

    <!-- PLURALS -->
    <plurals name="product">
        <item quantity="one">%d product</item>
        <item quantity="other">%d products</item>
    </plurals>

    <plurals name="category">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>