<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/colorView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_rect"
        android:digits="0123456789AaBbCcDdEeFf"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:maxLength="6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:valueFrom="0"
        android:valueTo="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelRed"
        app:layout_constraintTop_toBottomOf="@+id/colorView"
        app:thumbColor="#ff0000"
        app:trackColorActive="#ff0000" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelGreen"
        app:layout_constraintTop_toBottomOf="@+id/sliderRed"
        app:thumbColor="#00ff00"
        app:trackColorActive="#00ff00" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelBlue"
        app:layout_constraintTop_toBottomOf="@+id/sliderGreen"
        app:thumbColor="#0000ff"
        app:trackColorActive="#0000ff" />

    <TextView
        android:id="@+id/labelRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:text="@string/color_r"
        app:layout_constraintBottom_toBottomOf="@+id/sliderRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sliderRed" />

    <TextView
        android:id="@+id/labelGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:text="@string/color_g"
        app:layout_constraintBottom_toBottomOf="@+id/sliderGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderRed" />

    <TextView
        android:id="@+id/labelBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:text="@string/color_b"
        app:layout_constraintBottom_toBottomOf="@+id/sliderBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderGreen" />

</androidx.constraintlayout.widget.ConstraintLayout>